Se modifico el css agregando diferentes estilos

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body id="body">
-    <div id="container"></div> 
+    <div class="contendorPrincipal" id="container"></div> 
        
 </body>
 </html>
