--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Preguntados</title>
     <link rel="stylesheet" href="./style/Style.css">
-    <script type="module" src = "./Function/main.js" async defer></script>
+    <script type="module" src = "./Function/main.mjs" async defer></script>
     
 </head>
 <body id="body">
